<?xml version="1.0"?>
<package format="2">
  <name>add_lidar</name>
  <version>0.0.0</version>
  <description>The add_lidar package</description>

  <maintainer email="adarshts@todo.todo">adarshts</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <exec_depend>leo_gazebo</exec_depend>
  <exec_depend>leo_description</exec_depend>
  <exec_depend>hector_sensors_description</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

</package>
